@@ -1,5 +1,6 @@
 Changes in 3.1.6 : 
 - Don't show error message when torrent is loaded silently and the files can't be created
+- Make sure buttons get updated when paused state is toggled 
 
 Changes in 3.1.5 :
 - Make sure symlinks work when we create multifile torrents
